# claim

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PRODUCT.md  PROPOSAL.md  README.md  SPEC.md  TODO.md
crates/claim/: Cargo.toml
crates/claim-core/: Cargo.toml
crates/claim-core/src/: check.rs  claim.rs  error.rs  lib.rs  log.rs  verdict.rs
crates/claim-hub/: Cargo.toml
crates/claim-hub-core/: Cargo.toml
crates/claim-hub-core/src/: deriver.rs  digest.rs  envelope.rs  evidence.rs  lib.rs  memo.rs  nag.rs  rank.rs  wire.rs
crates/claim-hub-core/tests/: deriver_props.rs  memo_props.rs  rank_props.rs  wire_contract.rs
crates/claim-hub-store/: Cargo.toml
crates/claim-hub-store/.sqlx/: query-04616af4c5cd97c5a9f43b0b53d39c4e92c81662de943219bd953f7d81ce73d1.json  query-09fb9f1f7b9e8b0d3208f4701b4d5869ebff3c56583d5b21b33958b13758ea17.json  query-0ffed532708381229baeb3af140741c09369e08d88bb75cdee4edf0db2b10527.json  query-15dc5a03560594b1311827c4043e6c0fb894b4c0585dcf4db58637076803387c.json  query-197c0a195137fc86b328e467612213566ad54e74bb1d6e399eb8d271a8047566.json  query-2c9544741f693bb4bc25a18064c1e5cbadd565f60383dcc6238ebf71f07fae4c.json  query-2ef458ecd8990c899851e4d7d4eca68f88d11a946395427865b558d8dce9b1b8.json  query-2f4e4baac8f17f6fd42ff7277222fdfbe5db14ff3e7eb381f41901bdfe45e0f4.json  query-34145717cf2a6172cb7d988260bb4b74f1c1806e15b139a1060a960f68f9a4e0.json  query-53b53dc69015f604b0fd518120e99ec633d60857aa60d23cbdaad94e109296e3.json  query-58df6919bed8465e9798982415d2f69307ac687ad967b55a7cd443a57d2ee3b9.json  query-5a7b1f5e1eb1f5396a431920b05ca68daeed5de36ddc7beb4172c0b7583f9826.json  query-5a928ff2acdb63da3822c3e893af639a64f7afc851b6dd7f715abc76e9dfa307.json  query-64311baf87d20b6b791d5b952dde5c823d06283949a1c0e52614f0b0b414292b.json  query-6b1f4d45606f66af73254aa01a65996f830c8b8e04de10bfc1e38904e96b51d8.json  query-704c96d3122df1743320876e9e42b7644329968d7693fe4e52699b8c604f88ac.json  query-731bfc67061d028ed3761257df86d2d2c86070a33687bdae4dcbab32a348459f.json  query-74b615523fdd9eefa95e8f42c12aa8e95d4d2ce8fc0ad63cab78da96ff0370fc.json  query-756a0abefe37a608ae3fbe8f118bd7fd61356c1e7aa068b6a07ae7cf81612ad9.json  query-81fd1c8ef0ef9f6ab190e7f3aa1824c54975b1d174eb6197c8358fceac435c9e.json  query-8938f99471c64c36e8edf1613f2a510f11d22f63aa29040f6d87b4a5f2236427.json  query-89cbc9b917555a7d7bbf5886015195351c69e2369ee39b0f400ccc642f8a97c5.json  query-8a7c2e8833a554370fa766ff723f8a204d78880d11427c0f21c52888e1d826c4.json  query-9d02565a1ac3d43f0a51fcdd8827d87255cb9c45c4c3209f3b39dd8c6777886a.json  query-a040a39d8bedd79ea87de30ad39b2699d65d6a60e77386b98cb7d86e6e63ebbc.json  query-b24c4f62733e29505dbb22bc40e159a2beeb851891d5a48e2466fb993d176586.json  query-c2092a42e9fe58be73c28b3d86159c4efa02082c611dd7c810931a858b7d05d6.json  query-c5951f50657613f2ef0e8d1dc99bacbd0046e10638c23736a5cac0b337a969ea.json  query-cad40a8ec2c04905957fe21d69727b29fe1a3b5d7f24b8d31cf6a0492680e460.json  query-cd7e08db27526630d6e09f986e5fa5ae471810ab148dd1427bf3b6573c370998.json  query-cedd4914be52ae2cf4877849c385dbf1b30562b053355620319017d61f023c8f.json  query-cf6942d8c311e21088a4c5c25223d905bde729bc9139adc374d4e2501fae73f3.json  query-d18f788f362cdd4b618b9ed4788ec3cc984ac8ead3fb6ded68a3eec2b92f7995.json  query-e3084a2b3319d57c912325a6c639b70e7c8accff16b4e4d9a5e8ee6310e3234d.json  query-e5200e670cab11044da802759d42ea5c5584fb115fe4db5b96fd133478df5f5b.json  query-e6d809d6f22d0e6b4c886fb82f9241832ceebe870bee8999b21d89740467ca6f.json  query-f2dfa4606ab1c6a0c0313f0005dbee7c00ef4a0a1e9ceda0572be0fe12dff838.json
crates/claim-hub-store/migrations/: 0001_initial_schema.sql  0002_sync_findings.sql  0003_check_digests.sql  0004_ingest_rejections.sql  0005_claim_hub_hints.sql  0006_nag_events.sql  0007_check_skips.sql  0008_claim_path.sql
crates/claim-hub-store/src/: error.rs  findings.rs  ledger.rs  lib.rs  nag.rs  registry.rs  rejections.rs  snapshot.rs  sqlite.rs  sync.rs
crates/claim-hub-store/tests/: backup.rs  findings.rs  ledger.rs  nag.rs  registry.rs  rejections.rs  sync.rs
crates/claim-hub/examples/: seed_hub.rs
crates/claim-hub/src/: api.rs  app.rs  authlayer.rs  config.rs  http.rs  ingest.rs  lib.rs  main.rs  mcp.rs  metadata.rs  oidc.rs  readauth.rs  router.rs  scope.rs  status.rs  token.rs  ui.rs
crates/claim-hub/src/api/: tests.rs
crates/claim-hub/src/mcp/: tests.rs
crates/claim-hub/src/ui/: tests.rs  view.rs
crates/claim-hub/templates/: base.html  dossier.html  dossier.md  llms.txt  queue.html  queue.md  status.html  status.md  style.css
crates/claim-hub/tests/: backup_restore.rs  boot.rs  cli.rs  ingest.rs  ingest_action.rs  mcp.rs  nag_delivery.rs  read_auth.rs  router.rs  skeleton.rs  skip_ranking.rs
crates/claim-hub/tests/common/: mod.rs
crates/claim-hub/tests/fixtures/: oidc_signing_key.pem  oidc_wrong_key.pem
crates/claim-mcp/: Cargo.toml
crates/claim-mcp/src/: create.rs  main.rs  query.rs  report.rs  server.rs  testkit.rs
crates/claim-store/: Cargo.toml
crates/claim-store/src/: agent.rs  author.rs  error.rs  git.rs  lib.rs  path.rs  render.rs  store.rs
crates/claim/src/: apperror.rs  claimfile.rs  cli.rs  clock.rs  git.rs  main.rs  output.rs  scheduling.rs  store.rs
crates/claim/src/commands/: add.rs  amend.rs  check.rs  docs.rs  drift.rs  graph.rs  init.rs  list.rs  log.rs  mod.rs  retire.rs  show.rs  stats.rs
crates/claim/src/snapshots/: claim__claimfile__tests__rendered_claim_file_is_stable.snap
crates/claim/tests/: add.rs  amend.rs  check.rs  clock.rs  docs.rs  docs_cover_script.rs  drift.rs  graph.rs  init.rs  list.rs  log.rs  no_store.rs  pr_body_script.rs  retire.rs  show.rs  snapshots.rs  stats.rs
crates/claim/tests/common/: mod.rs
crates/claim/tests/snapshots/: docs__default_human_output_snapshot.snap  docs__headless_human_output_snapshot.snap  graph__human_output_snapshot.snap  snapshots__amend_human_snapshot.snap  snapshots__check_all_skipped_human_snapshot.snap  snapshots__check_human_snapshot.snap  snapshots__drift_clean_human_snapshot.snap  snapshots__drift_human_snapshot.snap  snapshots__log_human_snapshot.snap  (+4 more)
(+101 files in other folders)
