[package]
name = "claim-core"
description = "Domain model and logic for claim: parsing, verdict history, status, and check execution."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# YAML parser for claim frontmatter and embedded blocks. Chosen over the archived
# `serde_yaml` and the alternative fork `serde_yaml_ng`; rationale in CLAUDE.md.
serde_norway = { workspace = true }
# Timestamps and duration arithmetic for the verdict log. Chosen over `time` and
# `chrono` for its correctness-first design: `Timestamp` is an unambiguous UTC
# instant, RFC 3339 (de)serialization round-trips losslessly, and `checked_add`
# surfaces out-of-range arithmetic as an error instead of wrapping — the
# properties a trust tool needs from the clock its staleness is measured against.
jiff = { workspace = true }
# Bounds a check's run: wait on the child process with a deadline so a hung
# command times out to `Broken` instead of hanging the tool. A tiny, single-
# purpose crate wrapping the platform's timed-wait primitive (`waitpid`/wait
# objects); chosen over hand-rolling a `waitpid`+`SIGALRM`/self-pipe dance, which
# is easy to get subtly wrong and is exactly the correctness surface this crate
# already covers portably.
wait-timeout = { workspace = true }
# Raw FFI for the one syscall std does not expose: `killpg`, which kills a
# timed-out check's whole process group — the shell *and* any children it
# spawned — so `sleep 100 | foo` leaves no orphan. Std gives us `process_group(0)`
# to create the group but no way to signal it; libc is the smallest correct way
# to close that gap. Unix-only; guarded by `#[cfg(unix)]` at the call site.
libc = { workspace = true }
