[package]
name = "claim-hub-store"
description = "The hub's storage layer: the append-only Ledger and the derived-data Registry, as traits over a single WAL-mode SQLite file via sqlx. Append-only discipline and the dedup key are enforced in the schema, and history is immutable even below the trait."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# The event envelope, `CheckRef`, and `Producer` the ledger appends, plus the
# `claim_core::{Verdict, Timestamp}` those carry — one set of honesty types across
# every hub crate, so the store cannot disagree with core about what `held` means.
claim-hub-core = { path = "../claim-hub-core" }
# The registry keys on `ClaimId` and the ledger columns are typed against the
# `Verdict`/`Timestamp` re-exports; one set of domain types across the workspace.
claim-core = { path = "../claim-core" }
# Async SQL with compile-time-checked queries against the actual schema and
# migrations embedded in the binary via `sqlx::migrate!`, so the hub creates and
# upgrades its own database from an empty file with no external tooling. One crate
# covers SQLite now and Postgres at the later trait swap (HUB-IMPLEMENTATION.md §1.4).
# `sqlite` is the v1 driver; `runtime-tokio` puts sqlx on the runtime axum and rmcp
# share; `macros` enables the checked `query!`/`query_as!` macros; `migrate` embeds
# the migrations. No TLS feature: a SQLite-only build opens a local file and links no
# network backend, so no TLS (and no OpenSSL) is pulled in. The Postgres trait impl
# will add its own TLS feature when it lands. The feature set is deliberately minimal:
# no Postgres/MySQL driver, no chrono/uuid type integrations.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
# The async runtime the store's `async` trait methods run on, and axum/rmcp's shared
# substrate; already justified for the workspace in item 07. Only the runtime and
# the `#[tokio::test]`/`#[tokio::main]` macros are needed here.
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
# The enum<->TEXT column conversions are generic over serde's `Serialize`/
# `DeserializeOwned`, so the stored string form of a `Verdict`/`EventKind` is the
# shared type's own JSON spelling and cannot drift from it.
serde = { workspace = true }
# The `producer` column stores the verified identity block as JSON verbatim, and
# the enum-to-string conversions round-trip through `serde_json::Value`; reused
# from the workspace.
serde_json = { workspace = true }
# Typed store errors, so a caller recovers the reason a write or read failed (a
# schema fault, a serialization fault) without matching on prose. Reused workspace-wide.
thiserror = { workspace = true }

[dev-dependencies]
# Throwaway on-disk SQLite database files for the trait tests: each test migrates a
# fresh temp path, exercises the store, and drops it — no shared state, no network.
# Part of the approved integration-test stack (CLAUDE.md).
tempfile = "3"
# The trait methods are async; the tests drive them on a real runtime.
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
