[package]
name = "claim-hub"
description = "The hub binary: the axum application shell every later component mounts into. v1 ships config, the tower-layered router, /status, tracing, and boot; ingest, the API, MCP, and the UI arrive in later items."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# The hub's storage seam: `/status` reads the ledger head and registry version
# through the `Ledger`/`Registry` traits, and boot opens (creating if absent) the
# SQLite database via `SqliteStore::open`, which runs the embedded migrations. One
# store, shared across handlers.
claim-hub-store = { path = "../claim-hub-store" }
# The hub's domain types the store carries, named directly here so the shell shares
# one set of honesty types with the crates below it; the `/status` handler reads the
# `Ledger`/`Registry` traits through the store, and the ingest gate constructs `Event`s,
# reads the wire types, and caps evidence through this crate.
claim-hub-core = { path = "../claim-hub-core" }
# The shared honesty types the ingest gate names directly: `Timestamp` (each event's
# `reported_at`, and the injectable ingest clock) and `ClaimId` (validating a report's
# claim id before it keys a registry read). One `Verdict`/`Timestamp`/`ClaimId` across
# the workspace, so the hub cannot disagree with the CLI about them.
claim-core = { path = "../claim-core" }
# The API framework (HUB-IMPLEMENTATION.md §1.3): tokio-team maintained,
# tower-composable middleware so auth, tracing, and timeouts each become a testable
# layer, and native async handlers. rmcp (a later item) mounts into this router, so
# the JSON API and the hub MCP end up one process on one middleware stack.
axum = "0.8"
# Middleware as testable tower layers (HUB-IMPLEMENTATION.md §1.14): the shell's
# router is assembled from tower layers so a later item adds auth or a timeout as one
# composable layer rather than framework-specific plumbing. Also the source of
# `ServiceExt::oneshot`, which drives the app in-process in tests with no bound port
# and no network.
tower = { version = "0.5", features = ["util"] }
# HTTP-specific tower layers: `TraceLayer` gives every request a tracing span so a
# request carries span context through the stack (HUB-IMPLEMENTATION.md §1.12),
# structured rather than hand-rolled. Later items reuse this crate for timeouts and
# static assets.
tower-http = { version = "0.6", features = ["trace"] }
# The async runtime axum serves on, and the one rmcp and sqlx also use — the
# workspace's single async runtime, already justified in item 07. The binary needs
# the multi-threaded runtime (`rt-multi-thread`), the `#[tokio::main]` macro
# (`macros`), and the TCP listener (`net`) to bind and serve.
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "net",
] }
# Deserializes the one TOML config file (HUB-IMPLEMENTATION.md §1.12/§1.14):
# serde-native and tiny. The listen address, database path, and the stub sections
# later items fill are one serde-derived struct parsed from this format.
toml = "0.8"
# Structured spans through the request → handler path (HUB-IMPLEMENTATION.md §1.12):
# the tokio-ecosystem standard, so a request's work is traceable without hand-rolled
# logging. Later items add spans through ingest → append → derive on the same fabric.
tracing = "0.1"
# The tracing subscriber the binary installs at boot, reading `RUST_LOG` via its env
# filter so operators tune verbosity without a rebuild. Structured output, not
# `println` (CLAUDE.md).
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# The config file's fields and `/status`'s JSON body are serde-derived; reused
# from the workspace.
serde = { workspace = true }
# `/status` renders its position as a JSON object via axum's `Json` responder;
# reused from the workspace.
serde_json = { workspace = true }
# Binary errors: boot failures (a missing config file, a parse error naming the
# field, a database that will not open) are surfaced with `anyhow`'s context chain,
# the CLI binary's choice carried over.
anyhow = { workspace = true }
# JWT verification for the ingest gate's OIDC id-token check (HUB-IMPLEMENTATION.md
# §1.7/§1.14): the standard, actively maintained Rust implementation. The trust root
# of the whole ledger is this one place, so it is built directly on two auditable
# dependencies (this plus `reqwest`) and a page of our own JWKS-cache code, not on a
# low-adoption wrapper crate (§3 veto 5). `rust_crypto` selects the pure-Rust RustCrypto
# backend for the JWT signature (RSA/SHA-2 — the same lineage as `claim-hub-core`'s
# `sha2`). `use_pem` is deliberately *off*: the hub verifies against JWKS *components*
# (RSA `n`/`e`), never a PEM, so the PEM/ASN.1 parser is not in the library; the `jwk`
# module for `JwkSet`/`Jwk` is always available.
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
# The one HTTP client (HUB-IMPLEMENTATION.md §1.14): fetches the issuer's JWKS. rustls
# (not the default native-tls) so the binary links no *system* OpenSSL. Two honest
# caveats to record for a "single static binary, drops into any runner" project:
#   1. reqwest 0.13's `rustls` feature pulls `aws-lc-rs` (via `aws-lc-sys`) as rustls's
#      default crypto provider. It is a vendored, self-contained crypto library — not a
#      system dependency, so the no-system-OpenSSL goal holds — BUT `aws-lc-sys` builds C
#      and assembly, so the hub build now requires a C toolchain and `cmake` on the build
#      host. That is a real build-time cost, not glossed: a musl/static release build must
#      have them. (The JWT verification path itself stays pure-Rust via jsonwebtoken's
#      `rust_crypto`; only the TLS handshake uses aws-lc-rs.)
#   2. With the default client builder, reqwest 0.13's `rustls` uses the *platform*
#      certificate verifier (`rustls-platform-verifier`, the OS trust store) to validate
#      the JWKS endpoint's cert — NOT a crate-bundled root set. So the container image
#      ships CA certs (as the packaging note already states); a scratch image with no CA
#      bundle would fail to verify GitHub's public cert. This is standard, correct
#      behavior for reaching a public HTTPS endpoint; it is documented here so the trust
#      anchor for the JWKS fetch is not mistaken for a bundled one.
# Feature set is deliberately minimal: `rustls` for HTTPS and `json` to deserialize the
# JWKS response; no cookies, no blocking client, no native-tls backend.
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "json",
] }

[dev-dependencies]
# Drive the assembled axum app in-process via `tower::ServiceExt::oneshot` — no bound
# port, no network — asserting `/status` against a real, migrated temp store.
tower = { version = "0.5", features = ["util"] }
# A throwaway directory for the boot-and-serve test's SQLite file: each test opens a
# fresh store in a temp dir and drops it. Part of the approved integration-test stack
# (CLAUDE.md).
tempfile = "3"
# The store's trait methods are async, and the in-process app tests await the app's
# response; both run on a real runtime.
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
# Read `/status`'s response body in tests: `http-body-util`'s `BodyExt::collect`
# drains the `axum::body::Body` the oneshot returns into bytes to assert on.
http-body-util = "0.1"
# The ingest tests read the appended events back through the store's `Ledger` trait
# and populate the registry through `Registry`/its sync helpers; named directly so a
# test constructs a `RegisteredClaim` and scans the ledger.
claim-hub-store = { path = "../claim-hub-store" }
# The ingest tests sign their own test OIDC id-tokens with an RSA private key
# (`EncodingKey::from_rsa_pem`) so verification runs against a deterministic, injected
# JWKS with no network. `use_pem` (off in the library, which verifies against JWK
# components only) is enabled here so the test can build a signing key from a PEM;
# `rust_crypto` matches the library's backend so features unify to one crypto provider.
jsonwebtoken = { version = "10", default-features = false, features = [
    "use_pem",
    "rust_crypto",
] }
# Drive the real `claim-hub` binary to cover argument parsing and the env-override
# path end-to-end (a bad `--config`/`-c`, an unrecognized arg, and `CLAIM_HUB_*`
# variables set on the *spawned* process — deterministic, not the test's own env).
# The approved CLI integration-test stack (CLAUDE.md).
assert_cmd = "2"
# Match the binary's stderr against the named-message expectations (which argument,
# which variable) rather than a brittle full-string compare. Approved stack (CLAUDE.md).
predicates = "3"
