[package]
name = "claim-mcp"
description = "Model Context Protocol server exposing claim knowledge to agents: query verified facts, report verdicts."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "claim-mcp"
path = "src/main.rs"

[dependencies]
claim-core = { path = "../claim-core" }
claim-store = { path = "../claim-store" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# A malformed request (a bad filter value, a missing/empty evidence) is a typed
# library error the protocol shell maps to an MCP invalid-params error, so the
# tool logic raises `thiserror` enums the same way claim-core and claim-store do.
thiserror = { workspace = true }
# The official Model Context Protocol Rust SDK (github.com/modelcontextprotocol/
# rust-sdk). It owns the protocol: the JSON-RPC framing, the tool-call
# request/response shapes, and the stdio transport agents connect over. Rolling
# our own MCP framing would be a large, security-sensitive surface duplicating
# the spec's reference implementation; the SDK keeps `claim-mcp` a thin shell over
# `claim-core` + `claim-store`. `server` + `transport-io` only (no client, no
# HTTP): this process is a server that speaks over stdio and nothing else. The
# `macros` feature provides `#[tool]`/`#[tool_router]`/`#[tool_handler]`, which
# turn a plain method into a registered tool with a generated JSON schema.
rmcp = { version = "2.2.0", default-features = false, features = [
    "server",
    "transport-io",
    "macros",
] }
# rmcp's tools are async and it serves on a tokio runtime; this is the runtime the
# stdio server is driven on. `rt-multi-thread` + `macros` (for `#[tokio::main]`)
# and `io-std` for the stdin/stdout transport rmcp's `stdio()` returns.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
# rmcp derives a tool's input JSON schema from its parameter type via `schemars`;
# the request structs derive `JsonSchema`, so the SDK can advertise each tool's
# inputs to a connecting agent.
schemars = "1"

[dev-dependencies]
tempfile = "3"
# Drive the async tool handlers on a runtime in tests; `rt` + `macros` is enough
# for `#[tokio::test]` without the multi-thread runtime.
tokio = { version = "1", features = ["rt", "macros"] }
