[package]
name = "claim-store"
description = "Store discovery, claim loading, and git provenance for the claim CLI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
claim-core = { path = "../claim-core" }
# A store-discovery or git failure is a typed library error the CLI maps to its
# own surface (the `--json` error `kind`), so this crate raises `thiserror` enums
# — the same library-error choice as claim-core — rather than the binary-facing
# `anyhow`.
thiserror = { workspace = true }
# The store-load error is serialized into the CLI's machine output (the `--json`
# errors array), so a malformed file nags in a shape a consumer can read.
serde = { workspace = true }

[dev-dependencies]
tempfile = "3"
